tests/ui/lint/snapshots/index_out_of_bounds_empty_slice.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Index out of bounds
   ╭─[test.lis:3:18]
 2 │ fn main() {
 3 │   let _: int = [][0]
   ·                  ─┬─
   ·                   ╰── no element at `0`
 4 │ }
   ╰────
  help: Indexing at `0` will panic at runtime · code: [infer.index_out_of_bounds]
