tests/ui/lint/snapshots/index_out_of_bounds_equal_to_length.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Index out of bounds
   ╭─[test.lis:3:23]
 2 │ fn main() {
 3 │   let _ = [10, 20, 30][3]
   ·                       ─┬─
   ·                        ╰── no element at `3`
 4 │ }
   ╰────
  help: Indexing at `3` will panic at runtime · code: [infer.index_out_of_bounds]
