tests/ui/lint/snapshots/index_out_of_bounds_length_call.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Index out of bounds
   ╭─[test.lis:4:13]
 3 │   let xs = [10, 20]
 4 │   let _ = xs[xs.length()]
   ·             ──────┬──────
   ·                   ╰── no element at `xs.length()`
 5 │ }
   ╰────
  help: Indexing at `xs.length()` will panic at runtime · code: [infer.index_out_of_bounds]
