tests/ui/lint/snapshots/index_out_of_bounds_past_length.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Index out of bounds
   ╭─[test.lis:3:20]
 2 │ fn main() {
 3 │   let _ = [1, 2, 3][5]
   ·                    ─┬─
   ·                     ╰── no element at `5`
 4 │ }
   ╰────
  help: Indexing at `5` will panic at runtime · code: [infer.index_out_of_bounds]
