tests/ui/lint/snapshots/index_out_of_bounds_single_element.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Index out of bounds
   ╭─[test.lis:3:15]
 2 │ fn main() {
 3 │   let _ = [42][1]
   ·               ─┬─
   ·                ╰── no element at `1`
 4 │ }
   ╰────
  help: Indexing at `1` will panic at runtime · code: [infer.index_out_of_bounds]
